fix alignment

--- a/app/stylesheet.css.sass
+++ b/app/stylesheet.css.sass
@@ -85,3 +85,7 @@ body
     display: none
   .heading-gearing-sm
     display: block
+
+.w-95
+  width: 90%
+  margin: 0 auto
